--- a/frontend/fbs_app/src/components/Navbar/Navbar.module.css
+++ b/frontend/fbs_app/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .nav {
-  background-color: rgb(14, 31, 50);
+  background-color: var(--darkBlue);
 }
 
 .navbar {
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  background-color: rgba(23, 80, 74, 0.2);
+  background-color: var(--navbaritemColor);
   cursor: pointer;
   text-decoration: none;
   color: white;
@@ -29,7 +29,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  background-color: rgba(23, 80, 74, 0.2);
+  background-color: var(--navbaritemColor);
   cursor: pointer;
 }
 
@@ -41,8 +41,7 @@
   }
 }
 .openedMenu {
-  background-color: white;
-  background-color: rgb(29, 30, 31);
+  background-color: var(--openedMenuColor);
   height: 100vh;
   border-radius: 0rem 1rem 0rem 0rem;
   padding: 1rem;
@@ -60,6 +59,7 @@
   text-decoration: none;
   list-style-type: none;
   color: white;
+  align-items: flex-start;
 }
 @media only screen and (min-width: 650px) {
   .navbarItemMenu {
@@ -93,7 +93,7 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem;
-  background-color: rgba(23, 80, 74, 0.2);
+  background-color: var(--navbaritemColor);
   cursor: pointer;
   margin-bottom: 2rem;
 }
