--- a/frontend/fbs_app/src/components/RootLayout.tsx/RootLayout.module.css
+++ b/frontend/fbs_app/src/components/RootLayout.tsx/RootLayout.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-color: rgb(230, 229, 229);
+  background-color: var(--ligtGrey);
   padding: 1rem;
 }
 .outletContainer {
@@ -12,6 +12,6 @@
 @media only screen and (max-width: 650px) {
   .outletContainer {
     width: 100%;
-    min-width: 400px;
+    min-width: 350px;
   }
 }
