--- a/frontend/fbs_app/src/pages/styles/Teams.module.css
+++ b/frontend/fbs_app/src/pages/styles/Teams.module.css
@@ -47,3 +47,45 @@
   padding: 1rem;
   border-radius: 1rem;
 }
+
+.flag {
+  width: 20px;
+  height: 20px;
+}
+
+.teams {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+}
+.team {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1px solid rgb(232, 232, 232);
+  border-radius: 1rem;
+  padding: 1rem;
+  width: calc(100% - 2rem);
+}
+.logo {
+  width: 50px;
+  height: 50px;
+}
+.optionContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.optionImage {
+  width: 30px;
+  height: 20px;
+}
+
+.countrySelectContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
