--- a/frontend/fbs_app/src/components/Utils/styles/CountrySelect.module.css
+++ b/frontend/fbs_app/src/components/Utils/styles/CountrySelect.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
 .optionContainer {
   display: flex;
@@ -12,4 +13,8 @@
 .optionImage {
   width: 30px;
   height: 20px;
+}
+
+.select {
+  width: 100%;
 }
