--- a/frontend/fbs_app/src/components/Utils/styles/Filters.module.css
+++ b/frontend/fbs_app/src/components/Utils/styles/Filters.module.css
@@ -1,13 +1,6 @@
-.titleFiltersContainer {
-  display: flex;
-  margin-bottom: 1rem;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .filters {
-  background-color: #ffffff;
-  border: 1px solid rgb(230, 229, 229);
+  background-color: #f3f3fa;
+  border: 1px solid rgb(232, 232, 232);
   border-radius: 1rem;
   padding: 1rem;
   display: flex;
@@ -49,13 +42,21 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  width: 100%;
 }
 
 .nameInput {
-  width: 160px;
-  height: 35px;
+  width: 165px;
+  height: 36px;
   border: 1px solid rgb(203, 203, 203);
   border-radius: 0.2rem;
   margin-left: 1rem;
   padding-left: 0.5rem;
+  font-size: 1rem;
+  font-family: "Raleway", sans-serif;
+  width: 100%;
+}
+
+.select {
+  width: 100%;
 }
