--- a/frontend/fbs_app/src/pages/styles/Players.module.css
+++ b/frontend/fbs_app/src/pages/styles/Players.module.css
@@ -1,49 +1,44 @@
-.playersTable thead tr {
-  background-color: rgb(218, 218, 218);
-  color: #272727;
-  text-align: left;
-}
-
-.playersTable th,
-.playersTable td {
-  padding: 0.5rem 2rem;
-}
-.playersTable th {
-  font-size: 1rem;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.playersTable tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.playersTable tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-}
-
-.playersTable tbody tr:nth-of-type(odd) {
-  background-color: #ffffff;
-}
-
-.playersTable tbody tr:last-of-type {
-  border-bottom: 1px solid var(--darkGreen);
-}
-
-.playersTable {
-  border: 1px solid #ccc;
-  border-collapse: collapse;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  table-layout: fixed;
-  border-radius: 1rem;
-  overflow: hidden;
-  font-size: 14px;
-}
-
 .whiteContainer {
   background-color: white;
   padding: 1rem;
   border-radius: 1rem;
+}
+
+.players {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+}
+
+.titleFiltersContainer {
+  display: flex;
+  margin-bottom: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+.filters {
+  background-color: #ffffff;
+  border: 1px solid rgb(230, 229, 229);
+  border-radius: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 2rem;
+  gap: 1rem;
+  padding-bottom: 1rem;
+}
+
+.filterButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(219, 218, 218);
+  color: rgb(67, 67, 67);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
