--- a/frontend/fbs_app/src/pages/styles/Players.module.css
+++ b/frontend/fbs_app/src/pages/styles/Players.module.css
@@ -42,3 +42,8 @@
   border-radius: 0.5rem;
   cursor: pointer;
 }
+.filterButton:hover {
+  background-color: rgb(92, 90, 90);
+  color: rgb(241, 241, 241);
+  transition: 0.3s;
+}
