--- a/frontend/fbs_app/src/components/Navbar/Navbar.module.css
+++ b/frontend/fbs_app/src/components/Navbar/Navbar.module.css
@@ -10,9 +10,23 @@
   color: white;
   justify-content: space-between;
   padding: 0.7rem;
+  align-items: center;
 }
 
 .navbarItem {
+  border: 1px solid transparent;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  padding: 0.5rem;
+}
+
+.navbarItem:hover {
+  background-color: var(--navbaritemColor);
+}
+
+.loginButton {
   border: 1px solid transparent;
   border-radius: 0.5rem;
   display: flex;
@@ -23,6 +37,10 @@
   cursor: pointer;
   text-decoration: none;
   color: white;
+}
+
+.loginButton:hover {
+  color: var(--navbaritemColor);
 }
 
 .navbarItemMenu {
