--- a/frontend/fbs_app/src/pages/styles/Team.module.css
+++ b/frontend/fbs_app/src/pages/styles/Team.module.css
@@ -19,6 +19,19 @@
 .teamMenuItem {
   cursor: pointer;
   font-weight: 600;
+  color: rgb(82, 81, 81);
+}
+
+.teamMenuItem:hover {
+  cursor: pointer;
+  font-weight: 600;
+  color: rgb(35, 35, 35);
+}
+
+.teamMenuItemSelected {
+  cursor: pointer;
+  font-weight: 600;
+  color: rgb(36, 77, 172);
 }
 
 .whiteContainerTitle {
