--- a/frontend/fbs_app/src/components/RootLayout.tsx/RootLayout.module.css
+++ b/frontend/fbs_app/src/components/RootLayout.tsx/RootLayout.module.css
@@ -5,7 +5,6 @@
 }
 .outletContainer {
   width: 50%;
-
   min-width: 600px;
   margin: auto;
   min-height: 100vh;
@@ -13,6 +12,12 @@
 @media only screen and (max-width: 650px) {
   .outletContainer {
     width: 100%;
-    min-width: 350px;
+    min-width: 100px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .main {
+    padding: 0rem;
+    padding-top: 5.2rem;
   }
 }
