--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  width: 100%;
 }
 
 .leagueMenu {
@@ -62,44 +63,86 @@
 .score {
   font-weight: 600;
 }
+.scoreboard {
+  width: 100%;
+}
 
 .winner {
   font-weight: 600;
 }
 
-.scoreboardTable thead tr {
-  background-color: rgb(218, 218, 218);
-  color: #272727;
+.leaguesTable thead tr {
+  background-color: var(--darkBlue);
+  color: #ffffff;
   text-align: left;
 }
 
-.scoreboardTable th,
-.scoreboardTable td {
-  padding: 0.5rem 2rem;
+.leaguesTable th,
+.leaguesTable td {
+  padding: 1rem 0.5rem;
+  font-size: 0.8rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
-.scoreboardTable th {
-  font-size: 1rem;
+
+.leaguesTable td:nth-of-type(2) {
+  width: 70px;
+}
+.leaguesTable th:nth-of-type(2) {
+  width: 70px;
+}
+
+.leaguesTable td:nth-of-type(3) {
+  min-width: 15px;
+}
+.leaguesTable th:nth-of-type(3) {
+  min-width: 15px;
+}
+.leaguesTable td:nth-of-type(4) {
+  min-width: 15px;
+}
+.leaguesTable th:nth-of-type(4) {
+  min-width: 15px;
+}
+.leaguesTable td:nth-of-type(5) {
+  min-width: 15px;
+}
+.leaguesTable th:nth-of-type(5) {
+  min-width: 15px;
+}
+.leaguesTable td:nth-of-type(6) {
+  min-width: 35px;
+}
+.leaguesTable th:nth-of-type(6) {
+  min-width: 35px;
+}
+
+.leaguesTable th {
   font-weight: 400;
-  font-size: 13px;
 }
 
-.scoreboardTable tbody tr {
+.leaguesTable tbody tr {
   border-bottom: 1px solid #dddddd;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
-.scoreboardTable tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
+.leaguesTable tbody tr:nth-of-type(even) {
+  background-color: #f9f9f9;
 }
 
-.scoreboardTable tbody tr:nth-of-type(odd) {
+.leaguesTable tbody tr:nth-of-type(odd) {
   background-color: #ffffff;
 }
 
-.scoreboardTable tbody tr:last-of-type {
-  border-bottom: 1px solid var(--darkGreen);
+.leaguesTable tbody tr:hover {
+  border-bottom: 1px solid #dddddd;
+  color: white;
+  background-color: rgb(155, 164, 164);
 }
 
-.scoreboardTable {
+.leaguesTable {
   border: 1px solid #ccc;
   border-collapse: collapse;
   margin: 0;
@@ -108,5 +151,6 @@
   table-layout: fixed;
   border-radius: 1rem;
   overflow: hidden;
-  font-size: 14px;
+}
+@media only screen and (max-width: 400px) {
 }
