minor style changes

--- a/frontend/fbs_app/src/pages/styles/Leagues.module.css
+++ b/frontend/fbs_app/src/pages/styles/Leagues.module.css
@@ -33,14 +33,10 @@
   background-color: #ffffff;
 }
 
-.leaguesTable tbody tr:last-of-type {
-  border-bottom: 1px solid rgb(43, 18, 18);
-}
-
 .leaguesTable tbody tr:hover {
   border-bottom: 1px solid #dddddd;
-  color: white;
-  background-color: rgb(155, 164, 164);
+  color: rgb(38, 38, 38);
+  background-color: rgb(218, 223, 223);
 }
 
 .leaguesTable {
