--- a/frontend/fbs_app/src/pages/styles/Players.module.css
+++ b/frontend/fbs_app/src/pages/styles/Players.module.css
@@ -47,3 +47,8 @@
   color: rgb(241, 241, 241);
   transition: 0.3s;
 }
+.loadingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
