fixed team logos

--- a/frontend/fbs_app/src/components/Teams/TeamCard.module.css
+++ b/frontend/fbs_app/src/components/Teams/TeamCard.module.css
@@ -30,7 +30,13 @@
   transition: 0.3s;
 }
 
-.logo {
+.teamImageContainer {
   width: 60px;
-  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  height: 65px;
 }
