--- a/frontend/fbs_app/src/components/Results/Results.module.css
+++ b/frontend/fbs_app/src/components/Results/Results.module.css
@@ -33,6 +33,9 @@
 }
 .score {
   font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .matchTeam {
@@ -44,4 +47,27 @@
 .matchTeamLogo {
   width: 18px;
   height: 18px;
+}
+.playerMinutes {
+  background-color: rgb(47, 61, 90) !important;
+  color: rgb(255, 254, 254);
+  border-radius: 0.2rem;
+  padding: 0.1rem;
+}
+.playerGoals {
+  display: flex;
+}
+
+.goalNumber {
+  background-color: rgb(22, 122, 216);
+  color: white;
+  padding: 0 4px;
+  display: flex;
+  border-radius: 0.2rem;
+  align-self: center;
+  justify-content: center;
+  position: absolute;
+  margin-left: 12px;
+  margin-bottom: 20px;
+  font-size: 0.8rem;
 }
