--- a/frontend/fbs_app/src/components/Utils/styles/Filters.module.css
+++ b/frontend/fbs_app/src/components/Utils/styles/Filters.module.css
@@ -60,3 +60,22 @@
 .select {
   width: 100%;
 }
+
+.backGround {
+  background-color: rgba(0, 0, 0, 0.394);
+  width: 100vw;
+  min-height: 100%;
+  overflow: auto;
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-color: rgb(220, 219, 219);
+}
