--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -235,3 +235,115 @@
   justify-content: center;
   gap: 1rem;
 }
+.titleContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  align-items: center;
+}
+.filterButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(219, 218, 218);
+  color: rgb(67, 67, 67);
+  padding: 0.35rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+.filterButton:hover {
+  background-color: rgb(92, 90, 90);
+  color: rgb(241, 241, 241);
+  transition: 0.3s;
+}
+.modalContainer {
+  max-width: 500px;
+  min-width: 94vw;
+  height: 94vh;
+  padding-bottom: 1rem;
+  z-index: 51;
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.style {
+  background-color: white;
+}
+
+.modalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.closeModalButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(219, 218, 218);
+  color: rgb(67, 67, 67);
+  padding: 0.3rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0.3rem;
+}
+.filterContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.dateFilterInputs {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.dateSpan {
+  min-width: 40px;
+}
+.dateFilterInput {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.filterName {
+  font-size: 1.1rem;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.teamFilter_teamContainer {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.teamFilter_team {
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+}
+.teamFilter_teamLogo {
+  height: 22px;
+  width: 20px;
+}
+@media only screen and (min-width: 650px) {
+  .modalContainer {
+    max-width: 500px;
+    min-width: 20vw;
+    height: 70vh;
+    padding-bottom: 1rem;
+    z-index: 51;
+    overflow-y: scroll;
+  }
+}
