--- a/frontend/fbs_app/src/components/Results/Results.module.css
+++ b/frontend/fbs_app/src/components/Results/Results.module.css
@@ -53,7 +53,12 @@
   color: rgb(255, 254, 254);
   border-radius: 0.2rem;
   padding: 0.1rem;
+  min-width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .playerGoals {
   display: flex;
 }
