--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -38,6 +38,15 @@
   background-color: white;
   padding: 1rem;
   border-radius: 1rem 1rem 0rem 0rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+}
+
+.leagueFlag {
+  height: 15px;
+  margin-top: 3px;
 }
 
 .results {
