added links to player page

--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -86,6 +86,9 @@
   border-radius: 1rem;
   white-space: nowrap;
 }
+.scoreBoard_teamName {
+  cursor: pointer;
+}
 
 .winner {
   font-weight: 600;
