--- a/frontend/fbs_app/src/pages/styles/Player.module.css
+++ b/frontend/fbs_app/src/pages/styles/Player.module.css
@@ -131,6 +131,10 @@
   font-weight: bold;
 }
 
+.engagamentName {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 650px) {
   .playerImage {
     width: 130px;
