--- a/frontend/fbs_app/src/pages/styles/Player.module.css
+++ b/frontend/fbs_app/src/pages/styles/Player.module.css
@@ -135,10 +135,14 @@
   cursor: pointer;
 }
 
+.employment_teamName {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 650px) {
   .playerImage {
-    width: 130px;
-    height: 150px;
+    width: 100px;
+    height: 120px;
     border-radius: 1rem;
   }
 }
