--- a/frontend/fbs_app/src/pages/styles/Player.module.css
+++ b/frontend/fbs_app/src/pages/styles/Player.module.css
@@ -139,6 +139,76 @@
   cursor: pointer;
 }
 
+.modalContainer {
+  max-width: 500px;
+  min-width: 94vw;
+  height: 94vh;
+  padding-bottom: 1rem;
+  z-index: 51;
+  overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.style {
+  background-color: white;
+}
+
+.modalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.closeModalButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(219, 218, 218);
+  color: rgb(67, 67, 67);
+  padding: 0.3rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0.3rem;
+}
+.filterContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.dateFilterInputs {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.dateSpan {
+  min-width: 40px;
+}
+.dateFilterInput {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+@media only screen and (min-width: 650px) {
+  .modalContainer {
+    max-width: 500px;
+    min-width: 20vw;
+    height: 70vh;
+    padding-bottom: 1rem;
+    z-index: 51;
+    overflow-y: scroll;
+  }
+}
+
 @media only screen and (max-width: 650px) {
   .playerImage {
     width: 100px;
