--- a/frontend/fbs_app/src/pages/styles/NewPlayer.module.css
+++ b/frontend/fbs_app/src/pages/styles/NewPlayer.module.css
@@ -11,6 +11,7 @@
   border: 1px solid rgb(203, 203, 203);
   border-radius: 0.2rem;
   font-size: 1rem;
+  padding-left: 10px;
   font-family: "Raleway", sans-serif;
   width: 100%;
 }
