--- a/frontend/fbs_app/src/pages/styles/Player.module.css
+++ b/frontend/fbs_app/src/pages/styles/Player.module.css
@@ -113,6 +113,20 @@
 
 .engagementsTable_addIcon {
   cursor: pointer;
+  border: none;
+  gap: 0;
+  padding: 0.2rem;
+}
+.engagementsTable_deleteIcon {
+  cursor: pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+  background-color: #272727;
+  color: white;
+  border-radius: 0.5rem;
+  padding: 0.2rem;
+  max-width: 20px;
 }
 .playerInfoContainer {
   display: flex;
@@ -154,6 +168,15 @@
   z-index: 51;
   overflow-y: scroll;
 }
+.modalContainerDelete {
+  max-width: 500px;
+  min-width: 94vw;
+  height: 94vh;
+  padding-bottom: 1rem;
+  z-index: 51;
+  overflow-y: scroll;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -246,7 +269,14 @@
   .modalContainer {
     max-width: 500px;
     min-width: 20vw;
-    height: 70vh;
+    height: 28vh;
+    padding-bottom: 1rem;
+    z-index: 51;
+  }
+  .modalContainerDelete {
+    max-width: 500px;
+    min-width: 20vw;
+    height: 25vh;
     padding-bottom: 1rem;
     z-index: 51;
     overflow-y: scroll;
