--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -32,6 +32,11 @@
 .leagueMenuItem {
   cursor: pointer;
   font-weight: 600;
+  color: #555454;
+}
+.leagueMenuItemSelected {
+  color: rgb(40, 54, 131);
+  font-weight: bold;
 }
 
 .whiteContainerTitle {
@@ -349,6 +354,25 @@
   height: 22px;
   width: 20px;
 }
+.centerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+}
+.applyFiltersButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(219, 218, 218);
+  color: rgb(67, 67, 67);
+  padding: 0.5rem 2rem;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 650px) {
   .modalContainer {
     max-width: 500px;
