--- a/frontend/fbs_app/src/pages/styles/League.module.css
+++ b/frontend/fbs_app/src/pages/styles/League.module.css
@@ -373,6 +373,11 @@
   cursor: pointer;
 }
 
+.scoreBoard_filtersContainer {
+  display: flex;
+  gap: 0.5rem;
+}
+
 @media only screen and (min-width: 650px) {
   .modalContainer {
     max-width: 500px;
